--- a/specification/kubernetesconfiguration/resource-manager/Microsoft.KubernetesConfiguration/privateLinkScopes/tspconfig.yaml
+++ b/specification/kubernetesconfiguration/resource-manager/Microsoft.KubernetesConfiguration/privateLinkScopes/tspconfig.yaml
@@ -28,6 +28,7 @@ options:
     rename-model:
       PrivateEndpointConnectionListResult: ConnectionListResult
       PrivateLinkResourceListResult: ResourceListResult
+      ResourcesOperations: Resources
   "@azure-tools/typespec-ts":
     service-dir: sdk/kubernetesconfiguration
     emitter-output-dir: "{output-dir}/{service-dir}/arm-kubernetesconfiguration-privatelinkscopes"
