--- a/specification/eventgrid/resource-manager/Microsoft.EventGrid/EventGrid/tspconfig.yaml
+++ b/specification/eventgrid/resource-manager/Microsoft.EventGrid/EventGrid/tspconfig.yaml
@@ -24,6 +24,7 @@ options:
     service-name: "EventGrid" # human-readable service name, whitespace allowed
     flavor: azure
     use-object-for-unknown: true
+    uuid-as-string: false
   "@azure-tools/typespec-ts":
     service-dir: sdk/eventgrid
     emitter-output-dir: "{output-dir}/{service-dir}/arm-eventgrid"
