fix(recoveryservicessiterecovery): update service name in tspconfig
Change service-name from "RecoveryServicesSiteRecovery" to "Site Recovery"
in tspconfig.yaml to use the shorter, more appropriate name.

--- a/specification/recoveryservicessiterecovery/RecoveryServicesSiteRecovery.Management/tspconfig.yaml
+++ b/specification/recoveryservicessiterecovery/RecoveryServicesSiteRecovery.Management/tspconfig.yaml
@@ -21,7 +21,7 @@ options:
   "@azure-tools/typespec-java":
     emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-recoveryservicessiterecovery"
     namespace: "com.azure.resourcemanager.recoveryservicessiterecovery"
-    service-name: "RecoveryServicesSiteRecovery"
+    service-name: "Site Recovery"
     enable-sync-stack: true
     client-side-validations: true
     flavor: azure
