feat(networkfunction): update service name from Microsoft networkfunction to Azure Traffic Collector
Change the service-name in tspconfig.yaml from "Microsoft networkfunction" to
"Azure Traffic Collector" for better alignment with the actual service offering.

--- a/specification/networkfunction/NetworkFunction.Management/tspconfig.yaml
+++ b/specification/networkfunction/NetworkFunction.Management/tspconfig.yaml
@@ -20,7 +20,7 @@ options:
   "@azure-tools/typespec-java":
     emitter-output-dir: "{output-dir}/{service-dir}/azure-resourcemanager-networkfunction"
     namespace: "com.azure.resourcemanager.networkfunction"
-    service-name: "Microsoft networkfunction"
+    service-name: "Azure Traffic Collector"
     flavor: azure
   "@azure-tools/typespec-ts":
     service-dir: sdk/networkfunction
