--- a/specification/datafactory/DataFactory.Management/tspconfig.yaml
+++ b/specification/datafactory/DataFactory.Management/tspconfig.yaml
@@ -21,6 +21,7 @@ options:
     namespace: "com.azure.resourcemanager.datafactory"
     service-name: "DataFactory" # human-readable service name, whitespace allowed
     flavor: azure
+    use-object-for-unknown: true
   "@azure-tools/typespec-ts":
     service-dir: sdk/datafactory
     emitter-output-dir: "{output-dir}/{service-dir}/arm-datafactory"
